# nmpde-matrix-free-solvers

./: .gitignore  README.md  configure_fritz.txt  run_benchmark.py  script.txt
dt_poisson/: CMakeLists.txt
dt_poisson/scripts/: compare_backend.py
dt_poisson/src/: Heat.cpp  Heat.hpp  lab-06.cpp  sparse_time_convergence.cpp
dt_poisson_mf/: CMakeLists.txt
dt_poisson_mf/scripts/: compare_precond.py  outputs.txt  run_mf_strong.sh
dt_poisson_mf/src/: Heat.cpp  Heat.hpp  heat_mf_scaling.cpp  lab-06.cpp
lab-05/: CMakeLists.txt
lab-05/scripts/: plot-convergence.py
lab-05/src/: Poisson3D_parallel.cpp  Poisson3D_parallel.hpp  lab-05_parallel.cpp
lab-05_adr/src/: Poisson3D_parallel.cpp  Poisson3D_parallel.hpp  lab-05_parallel.cpp  lab-05_weak_mat.cpp  poisson_mat_strong.cpp
lab-05_mf/: CMakeLists.txt
lab-05_mf/src/: Poisson3D_parallel.cpp  Poisson3D_parallel.hpp  Poisson3D_parallel_mf.cpp  Poisson3D_parallel_mf.hpp  lab-05_parallel.cpp
lab-05_mf_adr/: CMakeLists.txt
lab-05_mf_adr/src/: Poisson3D_parallel_mf.cpp  Poisson3D_parallel_mf.hpp  (+3 more)
scripts/: compare_methods.py
strong_scaling_mf_spmat/: plot_strong_scaling.py  run_strong_scaling.sh
strong_scaling_steady/: job_strong_scaling_2nodes.sh  plot_charts.py  plot_complete_charts.py  plot_strong_scaling.py  run_strong_scaling.sh  srun_strong_scaling.sh
strong_scaling_time_dependent/: run_strong_scaling.sh
weak_scaling_steady/: job_weak_scaling_2nodes.sh  plot_complete_charts.py  plot_weak_scaling.py  run_weak_scaling.sh
weak_scaling_time_depedent/: plot_weak_scaling.py  run_weak_scaling.sh
